@@ -46,8 +46,8 @@
     <GtestSha1>058b9df80244c03f1633cb06e9f70471a29ebb8e</GtestSha1>
     <TitleSequencesUrl>https://github.com/OpenRCT2/title-sequences/releases/download/v0.1.2c/title-sequences.zip</TitleSequencesUrl>
     <TitleSequencesSha1>304d13a126c15bf2c86ff13b81a2f2cc1856ac8d</TitleSequencesSha1>
-    <ObjectsUrl>https://github.com/OpenRCT2/objects/releases/download/v1.0.12/objects.zip</ObjectsUrl>
-    <ObjectsSha1>56b5d22ed7da0afa750b3dcb5ac22de61e3597c2</ObjectsSha1>
+    <ObjectsUrl>https://github.com/OpenRCT2/objects/releases/download/v1.0.13/objects.zip</ObjectsUrl>
+    <ObjectsSha1>86cfb7f33763078d9f5e8009bb1b5bf3c674a263</ObjectsSha1>
     <ReplaysUrl>https://github.com/OpenRCT2/replays/releases/download/v0.0.8/replays.zip</ReplaysUrl>
     <ReplaysSha1>3309db1a932709312150124b1e3bbe57c7fb45d0</ReplaysSha1>
   </PropertyGroup>
